--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,42 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+    background-color: rgb(rgb(54, 54, 54), rgb(60, 61, 60), rgb(50, 50, 50));
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+img {
+    max-width: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+section {
+    margin: 2rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    width: 350px;
+    gap: 1rem;
+    background-color: rgba(0, 0, 0, 30%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+figure img {
+    width: 300px;
 }
 
-.card {
-  padding: 2em;
+div {
+    margin: 2rem;
 }
 
-.read-the-docs {
-  color: #888;
+div > input, button {
+    background-color: rgba(0, 0, 0, 30%);
+    border-radius: 0.5rem;
+    padding: 0.3rem;
+    font-size: inherit;
+    border-style: none;
+    border: 1px solid black;
+    
 }
